Fix image alignment

--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -16,6 +16,21 @@
 .post .body p {
   margin-bottom: 20px;
 }
+.post .body img {
+  display: block;
+}
+.post .body img.alignleft {
+  float: left;
+  margin: 5px 20px 20px 0;
+}
+.post .body img.alignright {
+  float: right;
+  margin: 5px 0 20px 20px;
+}
+.post .body img.aligncenter {
+  clear: both;
+  margin: 5px auto 20px;
+}
 
 .featured-posts {
   font-size: 22px;
